add image,background color

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </header>
 <section>
 	<h2>titre section</h2>
-	<article>
+	<article class="inside">
 		<h3>titre article</h3>
 		<div>
 			<ol>
@@ -22,7 +22,7 @@
 			</ol>
 		</div>
 	</article>
-	<article>
+	<article class="inside">
 		<h3>titre article</h3>
 		<div>
 			<ol>
@@ -33,7 +33,7 @@
 			</ol>
 		</div>
 	</article>
-	<article>
+	<article class="inside">
 		<h3>titre article</h3>
 		<div>
 			<ol>
@@ -47,7 +47,7 @@
 </section>
 <section>
 	<h2>titre section</h2>
-	<article>
+	<article class="inside">
 		<h3>titre article</h3>
 		<div>
 			<ol>
@@ -58,7 +58,7 @@
 			</ol>
 		</div>
 	</article>
-	<article>
+	<article class="inside">
 		<h3>titre article</h3>
 		<div>
 			<ol>
@@ -69,7 +69,7 @@
 			</ol>
 		</div>
 	</article>
-	<article>
+	<article class="inside">
 		<h3>titre article</h3>
 		<div>
 			<ol>
@@ -82,7 +82,7 @@
 	</article>
 </section>
 <footer>
-	<img src="" alt="">
+	<img src="octojedi.jpg" alt="octojedi">
 	<p></p>
 </footer>
 	
