--- a/index.html
+++ b/index.html
@@ -3,16 +3,16 @@
 <head>
 	<meta charset="UTF-8">
 	<link rel="stylesheet" type="text/css" href="style.css">
-	<title>Document</title>
+	<title>To Do List</title>
 </head>
 <body>
 <header>
-	<h1>Titre Projet</h1>
+	<h1>To Do List</h1>
 </header>
 <section>
-	<h2>titre section</h2>
+	<h2>Semaine 1</h2>
 	<article class="inside">
-		<h3>titre article</h3>
+		<h3 class="inline">titre article</h3>
 		<div>
 			<ol>
 				<li></li>
@@ -23,7 +23,7 @@
 		</div>
 	</article>
 	<article class="inside">
-		<h3>titre article</h3>
+		<h3 class="inline">titre article</h3>
 		<div>
 			<ol>
 				<li></li>
@@ -34,7 +34,7 @@
 		</div>
 	</article>
 	<article class="inside">
-		<h3>titre article</h3>
+		<h3 class="inline">titre article</h3>
 		<div>
 			<ol>
 				<li></li>
@@ -46,9 +46,10 @@
 	</article>
 </section>
 <section>
-	<h2>titre section</h2>
+	<h2>Semaine 2</h2>
 	<article class="inside">
-		<h3>titre article</h3>
+	<img class="outside" src="HTML_Logo.png">
+		<h3 class="inline">Apprendre HTML</h3>
 		<div>
 			<ol>
 				<li></li>
@@ -59,7 +60,8 @@
 		</div>
 	</article>
 	<article class="inside">
-		<h3>titre article</h3>
+	<img class="outside" src="css3-vector.png">
+		<h3 class="inline">Apprendre CSS</h3>
 		<div>
 			<ol>
 				<li></li>
@@ -70,7 +72,8 @@
 		</div>
 	</article>
 	<article class="inside">
-		<h3>titre article</h3>
+	<img class="outside" src="linux.png">
+		<h3 class="inline">Développer sous linux</h3>
 		<div>
 			<ol>
 				<li></li>
