--- a/index.html
+++ b/index.html
@@ -7,13 +7,14 @@
 </head>
 <body>
 <header>
-	<h1>To Do List</h1>
+	<h1>Projets en cours</h1>
 </header>
 <section>
 	<h2>Semaine 1</h2>
 	<article class="inside">
-		<h3 class="inline">titre article</h3>
-		<div>
+	<img class="outside" src="Git-Icon-1788C.png">
+		<h3 class="inline">Git</h3>
+		<div class="outdor">Terminé
 			<ol>
 				<li></li>
 				<li></li>
@@ -23,8 +24,9 @@
 		</div>
 	</article>
 	<article class="inside">
-		<h3 class="inline">titre article</h3>
-		<div>
+	<img class="outside" src="github-512.png">
+		<h3 class="inline">Github</h3>
+		<div class="outdor">Terminé
 			<ol>
 				<li></li>
 				<li></li>
@@ -34,8 +36,9 @@
 		</div>
 	</article>
 	<article class="inside">
-		<h3 class="inline">titre article</h3>
-		<div>
+	<img class="outside" src="linux.png">
+		<h3 class="inline">Développer sous linux</h3>
+		<div class="outdor">Terminé
 			<ol>
 				<li></li>
 				<li></li>
@@ -50,7 +53,7 @@
 	<article class="inside">
 	<img class="outside" src="HTML_Logo.png">
 		<h3 class="inline">Apprendre HTML</h3>
-		<div>
+		<div class="outdor">Terminé
 			<ol>
 				<li></li>
 				<li></li>
@@ -62,7 +65,7 @@
 	<article class="inside">
 	<img class="outside" src="css3-vector.png">
 		<h3 class="inline">Apprendre CSS</h3>
-		<div>
+		<div class="outdor">Terminé
 			<ol>
 				<li></li>
 				<li></li>
@@ -72,9 +75,8 @@
 		</div>
 	</article>
 	<article class="inside">
-	<img class="outside" src="linux.png">
-		<h3 class="inline">Développer sous linux</h3>
-		<div>
+		<h3 class="inline">Créer sa to do list</h3>
+		<div class="outdor">Terminé
 			<ol>
 				<li></li>
 				<li></li>
