add JS and text

--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
 	<article class="inside">
 	<img class="outside" src="Git-Icon-1788C.png">
 		<h3 class="inline">Git</h3>
-		<div class="outdor">Terminé
+		<div class="outdor">Terminé 
 			<ol>
-				<li></li>
-				<li></li>
-				<li></li>
-				<li></li>
+				<li>Savoir utiliser Git</li>
+				<li>Comprendre Git</li>
+				<li>Faie des commits</li>
+				<li>Pusher sur Github</li>
 			</ol>
 		</div>
 	</article>
@@ -28,10 +28,10 @@
 		<h3 class="inline">Github</h3>
 		<div class="outdor">Terminé
 			<ol>
-				<li></li>
-				<li></li>
-				<li></li>
-				<li></li>
+				<li>Créer son compte</li>
+				<li>Créer son premier repos</li>
+				<li>Prendre un repos</li>
+				<li>Mettre en ligne un repos</li>
 			</ol>
 		</div>
 	</article>
@@ -40,10 +40,10 @@
 		<h3 class="inline">Développer sous linux</h3>
 		<div class="outdor">Terminé
 			<ol>
-				<li></li>
-				<li></li>
-				<li></li>
-				<li></li>
+				<li>Utiliser le terminal</li>
+				<li>Installer sudo</li>
+				<li>Savoir naviguer dans les fichiers</li>
+				<li>Gérer les droits</li>
 			</ol>
 		</div>
 	</article>
@@ -55,10 +55,10 @@
 		<h3 class="inline">Apprendre HTML</h3>
 		<div class="outdor">Terminé
 			<ol>
-				<li></li>
-				<li></li>
-				<li></li>
-				<li></li>
+				<li>Connaître les balises</li>
+				<li>Comprendre les tableaux</li>
+				<li>écrire des commentaires</li>
+				<li>Les tags</li>
 			</ol>
 		</div>
 	</article>
@@ -67,21 +67,22 @@
 		<h3 class="inline">Apprendre CSS</h3>
 		<div class="outdor">Terminé
 			<ol>
-				<li></li>
-				<li></li>
-				<li></li>
-				<li></li>
+				<li>Savoir utiliser la doc</li>
+				<li>Connaître la syntaxe</li>
+				<li>Connaître les propriétés de base</li>
+				<li>Savoir ositionner ses éléments</li>
 			</ol>
 		</div>
 	</article>
 	<article class="inside">
-		<h3 class="inline">Créer sa to do list</h3>
-		<div class="outdor">Terminé
+	<img class="outside" src="JS.png">
+		<h3 class="inline">Apprendre JavaScript</h3>
+		<div class="indor">En cours
 			<ol>
-				<li></li>
-				<li></li>
-				<li></li>
-				<li></li>
+				<li class="inset">Apprendre les fonctions</li>
+				<li class="inset">Savoir déclarer des variables</li>
+				<li class="inset">Apprendre les conditions</li>
+				<li class="inset">Apprendre les boucles</li>
 			</ol>
 		</div>
 	</article>
