add mail and twitter

--- a/index.html
+++ b/index.html
@@ -88,8 +88,10 @@
 	</article>
 </section>
 <footer>
-	<img src="octojedi.jpg" alt="octojedi">
-	<p></p>
+	<p>
+	<img class="azert" src="gmail.png"><a href="mailto:cyrilforrez@gmail.com">cyrilforrez@gmail.com</a>
+	<img class="azert" src="twitter.png"><a href="https://twitter.com/cyrilforrez">@Forrez Cyril</a>	
+	</p>
 </footer>
 	
 </body>
