add background img et detail css

--- a/index.html
+++ b/index.html
@@ -6,11 +6,12 @@
 	<title>To Do List</title>
 </head>
 <body>
+<img src="octofd.jpg">
 <header>
 	<h1>Projets en cours</h1>
 </header>
 <section>
-	<h2>Semaine 1</h2>
+	<h2 class="aze">Semaine 1</h2>
 	<article class="inside">
 	<img class="outside" src="Git-Icon-1788C.png">
 		<h3 class="inline">Git</h3>
@@ -49,7 +50,7 @@
 	</article>
 </section>
 <section>
-	<h2>Semaine 2</h2>
+	<h2 class="aze">Semaine 2</h2>
 	<article class="inside">
 	<img class="outside" src="HTML_Logo.png">
 		<h3 class="inline">Apprendre HTML</h3>
