--- a/index.html
+++ b/index.html
@@ -6,14 +6,13 @@
 	<title>To Do List</title>
 </head>
 <body>
-<img src="octofd.jpg">
 <header>
 	<h1>Projets en cours</h1>
 </header>
 <section>
 	<h2 class="aze">Semaine 1</h2>
 	<article class="inside">
-	<img class="outside" src="Git-Icon-1788C.png">
+	<img class="outside" src="./img/Git-Icon-1788C.png">
 		<h3 class="inline">Git</h3>
 		<div class="outdor">Terminé 
 			<ol>
@@ -25,7 +24,7 @@
 		</div>
 	</article>
 	<article class="inside">
-	<img class="outside" src="github-512.png">
+	<img class="outside" src="./img/github-512.png">
 		<h3 class="inline">Github</h3>
 		<div class="outdor">Terminé
 			<ol>
@@ -37,7 +36,7 @@
 		</div>
 	</article>
 	<article class="inside">
-	<img class="outside" src="linux.png">
+	<img class="outside" src="./img/linux.png">
 		<h3 class="inline">Développer sous linux</h3>
 		<div class="outdor">Terminé
 			<ol>
@@ -52,7 +51,7 @@
 <section>
 	<h2 class="aze">Semaine 2</h2>
 	<article class="inside">
-	<img class="outside" src="HTML_Logo.png">
+	<img class="outside" src="./img/HTML_Logo.png">
 		<h3 class="inline">Apprendre HTML</h3>
 		<div class="outdor">Terminé
 			<ol>
@@ -64,7 +63,7 @@
 		</div>
 	</article>
 	<article class="inside">
-	<img class="outside" src="css3-vector.png">
+	<img class="outside" src="./img/css3-vector.png">
 		<h3 class="inline">Apprendre CSS</h3>
 		<div class="outdor">Terminé
 			<ol>
@@ -76,7 +75,7 @@
 		</div>
 	</article>
 	<article class="inside">
-	<img class="outside" src="JS.png">
+	<img class="outside" src="./img/JS.png">
 		<h3 class="inline">Apprendre JavaScript</h3>
 		<div class="indor">En cours
 			<ol>
@@ -90,8 +89,8 @@
 </section>
 <footer>
 	<p>
-	<img class="azert" src="gmail.png"><a href="mailto:cyrilforrez@gmail.com">cyrilforrez@gmail.com</a>
-	<img class="azert" src="twitter.png"><a href="https://twitter.com/cyrilforrez">@Forrez Cyril</a>	
+	<img class="azert" src="./img/gmail.png"><a href="mailto:cyrilforrez@gmail.com">cyrilforrez@gmail.com</a>
+	<img class="azert" src="./img/twitter.png"><a href="https://twitter.com/cyrilforrez">@Forrez Cyril</a>	
 	</p>
 </footer>
 	
