--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 				<li>Savoir utiliser la doc</li>
 				<li>Connaître la syntaxe</li>
 				<li>Connaître les propriétés de base</li>
-				<li>Savoir ositionner ses éléments</li>
+				<li>Savoir positionner ses éléments</li>
 			</ol>
 		</div>
 	</article>
