--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 </head>
 <body>
 <header>
+<img class="disp" src="./img/octojedi.jpg">
+<img class="dispe" src="./img/octojedi.jpg">
 	<h1>Projets en cours</h1>
 </header>
 <section>
